# Surguch

./: .gitignore  CMakeLists.txt  README  README.md
.gear/: rules  sealwax.spec  surguch.spec
docs/: basic_struct.drawio
resources/: resources.qrc
resources/translations/: ru_RU.ts
src/: CMakeLists.txt  main.cpp  sealwax.desktop  surguch.desktop
src/core/: CMakeLists.txt  file_recover_worker.cpp  file_recover_worker.hpp  mu_page_render.cpp  mu_page_render.hpp  pdf_obj_keeper.cpp  pdf_obj_keeper.hpp  printer_launcher.cpp  printer_launcher.hpp  raw_signature.cpp  raw_signature.hpp  sign_worker.cpp  sign_worker.hpp  signature_creator.cpp  signature_creator.hpp  signature_processor.cpp  signature_processor.hpp  signatures_validator.cpp  signatures_validator.hpp  utils.cpp  utils.hpp
src/core/csp_c_bridge/: CMakeLists.txt  bridge_utils.cpp  bridge_utils.hpp  csp_response.cpp  csp_response.hpp  validation_result.cpp  validation_result.hpp
src/cpp_views/: pdf_page_render.cpp  pdf_page_render.hpp
src/models/: CMakeLists.txt  pdf_doc_model.cpp  pdf_doc_model.hpp  pdf_page_model.cpp  pdf_page_model.hpp  profiles_model.cpp  profiles_model.hpp  signatures_list_model.cpp  signatures_list_model.hpp
src/test/: CMakeLists.txt  t_signature.cpp  t_signature.hpp  test_common.cpp
src/views/: CertInfo.qml  EditProfile.qml  Header.qml  HeaderSubBar.qml  HeaderToolSeparator.qml  LeftSideBar.qml  Main.qml  PdfListView.qml  PdfPage.qml  PreviewListView.qml  RSBCloseButton.qml  RSBComboSelect.qml  RSBSigInfo.qml  RSBSwitch.qml  RSBTextArea.qml  RSideBarStatusMedal.qml  RightSBHorizontalDelimiter.qml  RightSideBar.qml  RightSideBarCertChain.qml  SignaturesList.qml  TextPair.qml  TextPairBool.qml  TextPairStatus.qml  TopBarButton.qml  UnsavedChangesDialog.qml  qml_sources.qrc
